--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Contacts#edit</h1>
-<p>Find me in app/views/contacts/edit.html.erb</p>
+### edit.html.erb ###
+<h1>Editar Contato</h1>
+<%= render 'form_contacts' %>
