--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,2 +1,36 @@
-<h1>Contacts#index</h1>
-<p>Find me in app/views/contacts/index.html.erb</p>
+<h1>Lista de Contatos</h1>
+
+<div class="mb-3">
+  <%= link_to "Criar Novo Contato", new_contact_path, class: "btn btn-success" %>
+</div>
+
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Primeiro Nome</th>
+      <th>Último Nome</th>
+      <th>E-mail</th>
+      <th>Telefone</th>
+      <th>Empresa</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @contacts.each do |contact| %>
+      <tr>
+        <td><%= contact.first_name %></td>
+        <td><%= contact.last_name %></td>
+        <td><%= contact.email %></td>
+        <td><%= contact.telephone %></td>
+        <td><%= contact.company.company_name if contact.company %></td>
+        <td>
+            <%= link_to "Visualizar", contact_path(contact), class: "btn btn-info btn-sm" %>
+            <%= link_to "Editar", edit_contact_path(contact), class: "btn btn-primary btn-sm" %>
+            <%= link_to "Excluir", contact_path(contact), method: :delete, data: { confirm: "Você tem certeza?" }, class: "btn btn-danger btn-sm" %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= paginate @contacts %>
